<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="@bool/settings_grade_show_all_default"
        android:disableDependentsState="true"
        android:key="@string/settings_grade_show_all_key"
        android:summary="@string/settings_grade_show_all_summary"
        android:title="@string/settings_grade_show_all_title" />

    <MultiSelectListPreference
        android:defaultValue="@array/listGradesDefault"
        android:dependency="@string/settings_grade_show_all_key"
        android:dialogTitle="@string/settings_grade_dialog_title"
        android:entries="@array/listGrades"
        android:entryValues="@array/listGrades"
        android:key="@string/settings_grade_key"
        android:summary="@string/settings_grade_summary"
        android:title="@string/settings_grade_dialog_title" />

    <EditTextPreference
        android:defaultValue="@string/settings_course_default"
        android:dependency="@string/settings_grade_show_all_key"
        android:dialogTitle="@string/settings_course_dialog_title"
        android:hint="@string/settings_course_hint"
        android:key="@string/settings_course_key"
        android:summary="@string/settings_course_summary"
        android:title="@string/settings_course_title" />

</PreferenceScreen>
