<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_light_24dp"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_light_24dp"
        android:title="@string/action_share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_about_light_24dp"
        android:title="@string/action_credits"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_contact_developer"
        android:title="@string/action_contact_developer"
        app:showAsAction="never" />

</menu>
