<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/aboutContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="de.jbamberger.fhgapp.ui.about.AboutActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/about_card_margin">

            <TextView
                style="@style/About.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_disclaimer_title" />

            <TextView
                style="@style/About.Content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_disclaimer_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/listDivider" />

            <TextView
                style="@style/About.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_contact_title" />

            <TextView
                style="@style/About.Content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_contact_content" />

            <Button
                android:id="@+id/about_contact_mail"
                style="@style/About.Action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/about_contact_mail"
                app:onClickListener="@{contact_dev_listener}" />

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/listDivider" />

            <TextView
                style="@style/About.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/about_version_title" />

            <TextView
                style="@style/About.Content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{@string/about_version_content(BuildConfig.APPLICATION_ID, BuildConfig.BUILD_TYPE, BuildConfig.VERSION_NAME, BuildConfig.VERSION_CODE)}"
                tools:text="Application id: de.jbamberger.fhgapp\nBuild type: DEBUG\nVersion: 3.0.0-alpha1 (42)" />

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/listDivider" />

            <TextView
                style="@style/About.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:padding="@dimen/about_card_margin"
                android:text="@string/about_oss_licenses"
                app:onClickListener="@{show_oss_licences_listener}" />


        </LinearLayout>


    </ScrollView>

    <data>

        <import type="de.jbamberger.fhgapp.BuildConfig" />

        <variable
            name="contact_dev_listener"
            type="android.view.View.OnClickListener" />

        <variable
            name="show_oss_licences_listener"
            type="android.view.View.OnClickListener" />
    </data>
</layout>