<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/about_card_margin">

        <Button
            android:id="@+id/about_contact_mail"
            style="@style/About.Action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_contact_mail"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/content"
            app:onClickListener="@{listener::onClick}" />

        <TextView
            android:id="@+id/content"
            style="@style/About.Content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/about_contact_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/title"
            style="@style/About.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/about_contact_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <data>

        <variable
            name="listener"
            type="android.view.View.OnClickListener" />
    </data>

</layout>